syntax = "proto3";

option go_package = "github.com/ysugimoto/grpc-graphql-gateway/examples/basic/app/author";

package author;

import "graphql/graphql.proto";

message Author {
  string name = 2;
}

message ListAuthorsRequest {}
message ListAuthorsResponse {
  repeated Author authors = 1;
}

message GetAuthorRequest {
  string name = 1;
}

service AuthorService {
  option (graphql.service) = {
    host: "localhost:8080"
    insecure: true
  };

  rpc ListAuthors(ListAuthorsRequest) returns (ListAuthorsResponse) {
    option (graphql.query) = {
      name: "authors"
      response {
        expose: "authors"
      }
    };
  }
  rpc GetAuthor(GetAuthorRequest) returns (Author) {
    option (graphql.query) = {
      name: "author"
    };
  }
}


